--- a/resources/html/devtools-panel.html
+++ b/resources/html/devtools-panel.html
@@ -1,7 +1,13 @@
+<html>
 <head>
+  <link rel="stylesheet" href="bootstrap.css">
+  <script src="bootstrap.js"></script>
+  <script src="jquery-1.11.3.js"></script>
 <title></title>
 <!--<script src="devtools-panel.js"></script>-->
 </head>
 <body>
-    <p>QA R!!!!</p>
+    <button type="button" class="btn btn-success">Success</button>
+    <img src="giphy.gif" alt="This will display an animated GIF" />
 </body>
+</html>
