added trigger for start recording.

--- a/resources/html/devtools-panel.html
+++ b/resources/html/devtools-panel.html
@@ -1,13 +1,14 @@
 <html>
 <head>
   <link rel="stylesheet" href="bootstrap.css">
-  <script src="jquery-1.11.3.js"></script>
+  <script src="jquery.js"></script>
   <script src="bootstrap.js"></script>
+  <script src="qa_report.js"></script>
 <title></title>
-<!--<script src="devtools-panel.js"></script>-->
 </head>
 <body>
-    <button type="button" class="btn btn-success">Success</button>
-    <img src="giphy.gif" alt="This will display an animated GIF" />
+  <button type="button" class="btn btn-success" id="trigger-btn">Start</button>
+  <img src="giphy.gif" alt="This will display an animated GIF" />
+  <script src="devtools-panel.js"></script>
 </body>
 </html>
